💎(site) Update applicable type classes, introduce new colors (#214)
* add new colors, update base type classes

* update font-scale, type breakpoints

* update type scaling, colors, add headline mega to style guide

* update base color

* updated cta styles

* active styling on cta--low

* simplify font scale mixin, use fluid function

* VQA adjustments, typography guide updates

* remove scaling rate adjustments, ordinal theming color names

* use flexFont, update pxCast, CTA unit adjustments

* CTA accessibility updates

* remove redundant line-heights

* update generateScaling function name

* swap GS display for GS text, replace roboto

* include GS text 500 weight and use for quotes

--- a/site/sass/components/_typography.scss
+++ b/site/sass/components/_typography.scss
@@ -56,6 +56,10 @@ $section-block-margin: 3.75rem;
     }
   }
 
+  &--mega {
+    @extend %type--mega;
+  }
+
   &--link {
     @extend %anchor;
   }
