--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -1,52 +1,66 @@
 $google-colors: (
   'blue-900': #174ea6,
+  'blue-850': #1c50b9,
   'blue-800': #185abc,
   'blue-700': #1967d2,
+  'blue-650': #3474e0,
   'blue-600': #1a73e8,
   'blue-500': #4285f4,
   'blue-400': #669df6,
   'blue-300': #8ab4f8,
+  'blue-250': #76c9fa,
   'blue-200': #aecbfa,
   'blue-100': #d2e3fc,
   'blue-50': #e8f0fe,
   'blue-25': #f4f8ff,
   'red-900': #a50e0e,
   'red-800': #b31412,
+  'red-750': #b2181b,
   'red-700': #c5221f,
+  'red-650': #c84030,
   'red-600': #d93025,
   'red-500': #ea4335,
   'red-400': #ee675c,
   'red-300': #f28b82,
   'red-200': #f6aea9,
+  'red-250': #fbb4a7,
   'red-100': #fad2cf,
   'red-50': #fce8e6,
   'yellow-900': #e37400,
   'yellow-800': #ea8600,
+  'yellow-750': #e98622,
   'yellow-700': #f29900,
   'yellow-600': #f9ab00,
   'yellow-500': #fbbc04,
+  'yellow-450': #fbbd03,
   'yellow-400': #fcc934,
   'yellow-300': #fdd663,
+  'yellow-250': #ffde68,
   'yellow-200': #fde293,
   'yellow-100': #feefc3,
   'yellow-50': #fef7e0,
   'green-900': #0d652d,
+  'green-850': #1a7236,
   'green-800': #137333,
   'green-700': #188038,
   'green-600': #1e8e3e,
   'green-500': #34a853,
+  'green-450': #4bad4b,
   'green-400': #5bb974,
   'green-300': #81c995,
+  'green-250': #80db7a,
   'green-200': #a8dab5,
   'green-100': #ceead6,
   'green-50': #e6f4ea,
+  'grey-1000': #000000,
   'grey-900': #202124,
   'grey-800': #3c4043,
-  'grey-700': #5f6368,
+  'grey-700': #606367,
   'grey-600': #80868b,
   'grey-500': #9aa0a6,
   'grey-400': #bdc1c6,
-  'grey-300': #dadce0,
+  'grey-350': #c9c9c9,
+  'grey-300': #dadcdf,
   'grey-200': #e8eaed,
   'grey-100': #f1f3f4,
   'grey-50': #f8f9fa,
