--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -48,7 +48,9 @@ $google-colors: (
   'grey-400': #bdc1c6,
   'grey-300': #dadce0,
   'grey-200': #e8eaed,
+  'grey-150': #efefef,
   'grey-100': #f1f3f4,
+  'grey-75': #f6f6f6,
   'grey-50': #f8f9fa,
   'orange-900': #b06000,
   'orange-800': #c26401,
