--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -23,7 +23,7 @@ hideNewsletter: true
   </section>
 
   <!-- Site Subnav -->
-  <div id="home__subnav" class="wrapper wrapper--padded">
+  <div id="home__subnav" class="wrapper wrapper--full-bleed wrapper--padding wrapper--padded wrapper__background wrapper__contained">
     {{ itemGrid(l10n.home.subnav.content.title, l10n.nav, l10n.home.subnav.modifiers, l10n.locale.code) }}
   </div>
 
