--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -14,13 +14,25 @@
   position: relative;
   z-index: 10;
 
+  &__title,
+  &__subtitle {
+    text-align: center;
+  }
+
   &__title {
     margin: 0 auto;
     max-width: pxRem(640px);
     padding: 0 calc(var(--shape-circle--size) / 6);
     position: relative;
-    text-align: center;
     z-index: 3;
+  }
+
+  &__subtitle {
+    margin-top: 1rem;
+
+    @supports (margin-top: clamp(1px, 1vw, 2px)) {
+      margin-top: clamp(0.625rem, 2.66vw, 1rem);
+    }
   }
 
   &__content {
@@ -54,7 +66,8 @@
 
   &--subnav & {
     &__content {
-      grid-template-columns: repeat(auto-fit, minmax(pxRem(256px), 1fr));
+      grid-gap: 1.875rem 1.25rem;
+      grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
       justify-content: center;
     }
   }
