--- a/site/sass/components/_wrapper.scss
+++ b/site/sass/components/_wrapper.scss
@@ -7,14 +7,14 @@
 @use 'sass:math';
 
 .wrapper {
-  $content-max-width: pxRem(1440px);
+  $content-max-width: pxRem(1600px);
 
-  $max-width: 1024px;
+  $max-width: 1440px;
   $scaler: math.div(math.div($max-width, 100), 1vw);
 
-  $block-spacing-s: 5.75rem;
-  $block-spacing-l: 7.5rem;
-  $inline-spacing-s: 3.75rem;
+  $block-spacing-s: 8.25rem;
+  $block-spacing-l: 10.5rem;
+  $inline-spacing-s: 1.5rem;
   $inline-spacing-l: 5rem;
 
   $bumper-s: 0.875rem;
@@ -55,14 +55,19 @@
     padding-right: $inline-spacing-m;
 
     @supports (margin: clamp(1px, 1vw, 2px)) {
-      padding-left: $inline-spacing-r;
-      padding-right: $inline-spacing-r;
+      padding-left: generateScale((744px 1140px), (24px 60px));
+      padding-right: generateScale((744px 1140px), (24px 60px));
+
+      @include mq(1140px) {
+        padding-left: generateScale((1140px 1440px), (60px 80px));
+        padding-right: generateScale((1140px 1440px), (60px 80px));
+      }
     }
   }
 
   &__contained > * {
     margin: 0 auto;
-    max-width: $content-max-width;
+    max-width: $max-width;
   }
 
   &--rhythm > *:not(:last-child) {
@@ -180,7 +185,7 @@
   }
 
   &__background {
-    background-color: var(--grey-50);
+    background-color: var(--grey-75);
     overflow: hidden;
 
     .cta--link {
