--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -54,8 +54,12 @@ $google-colors: (
   'green-50': #e6f4ea,
   'grey-1000': #000000,
   'grey-900': #202124,
+  'grey-850': #2d2d2d,
   'grey-800': #3c4043,
+  'grey-750': #505050,
+  'grey-725': #565656,
   'grey-700': #606367,
+  'grey-650': #6c6c6c,
   'grey-600': #80868b,
   'grey-500': #9aa0a6,
   'grey-400': #bdc1c6,
