--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -54,6 +54,7 @@ $google-colors: (
   'green-50': #e6f4ea,
   'grey-1000': #000000,
   'grey-900': #202124,
+  'grey-850': #2d2d2d,
   'grey-800': #3c4043,
   'grey-700': #606367,
   'grey-600': #80868b,
