--- a/site/sass/components/_external-community.scss
+++ b/site/sass/components/_external-community.scss
@@ -1,20 +1,21 @@
 // Styles for the external community with logo.
 .external-community {
   $logo-size: pxRem(48px);
+  $max-width: 7.25rem;
 
-  flex: 1 0 pxRem(102px);
-  max-width: pxRem(102px);
+  flex: 1 0 $max-width;
+  max-width: $max-width;
   text-decoration: none;
 
   &__liner {
     align-items: center;
     border: 1px solid var(--grey-200);
-    border-radius: pxRem(10px);
+    border-radius: 0.625rem;
     display: flex;
     flex-direction: column;
     height: 100%;
     justify-self: center;
-    padding: 1rem 0.25ch;
+    padding: 1rem 0.25rem;
     text-align: center;
   }
 
@@ -26,14 +27,13 @@
   }
 
   &__copy-wrapper {
-    color: var(--black);
+    color: var(--grey-850);
     font-family: Helvetica, Arial, sans-serif;
-    font-size: pxEm(14px);
     line-height: 1.3;
 
     strong {
       display: block;
-      margin-bottom: pxRem(10px);
+      margin-bottom: 0.75rem;
     }
   }
 }
