--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -25,7 +25,7 @@
 
   &__content {
     display: grid;
-    grid-gap: pxRem(40px) pxRem(24px);
+    grid-gap: pxRem(40px) pxRem(20px);
     margin-top: pxRem(40px);
 
     @include mq(430px) {
@@ -34,26 +34,13 @@
   }
 
   &--community & {
-    &__title,
-    &__content {
-      max-width: max(760px, 75vw);
-
-      @include mq(1348px) {
-        max-width: pxRem(1200px);
-      }
-    }
-
     &__content {
       display: flex;
       flex-flow: row wrap;
-      grid-gap: pxRem(20px);
       justify-content: center;
       margin-left: auto;
       margin-right: auto;
-
-      @include mq(1348px) {
-        justify-content: flex-start;
-      }
+      row-gap: 1.25rem;
     }
   }
 
