integrate with globals, typography and guide updates

--- a/site/_components/card.njk
+++ b/site/_components/card.njk
@@ -24,7 +24,7 @@
         {% if data.topic %}{{ icon(data.eyebrow) }}{% endif %}
         <small class="card__eyebrow type--eyebrow">{{ data.eyebrow }}</small>
       </div>
-      <h4 class="type--h4">{{ data.title }}</h4>
+      <h4 class="card__heading type--h4">{{ data.title }}</h4>
     </header>
     <p id="{{ bodyId }}" class="card__body">{{ data.body }}</p>
     <footer class="card__footer">
