--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -54,12 +54,16 @@ $google-colors: (
   'green-50': #e6f4ea,
   'grey-1000': #000000,
   'grey-900': #202124,
+  'grey-825': #262626,
   'grey-800': #3c4043,
+  'grey-775': #4e4e4e,
+  'grey-750': #505050,
   'grey-700': #606367,
   'grey-600': #80868b,
   'grey-500': #9aa0a6,
   'grey-400': #bdc1c6,
   'grey-350': #c9c9c9,
+  'grey-325': #e2e2e2,
   'grey-300': #dadcdf,
   'grey-200': #e8eaed,
   'grey-100': #f1f3f4,
