--- a/site/sass/globals/_functions.scss
+++ b/site/sass/globals/_functions.scss
@@ -32,7 +32,7 @@
 //  @param {boolean} $rem (optional) - output units in rems. When false, outputs units in ems.
 //  @example <caption>Between screen sizes of 744px and 1140px, linearly scale the padding from 20px to 40px.</caption>
 //  .selector {
-//    padding: fluid((744px 1140px), (20px 40px));
+//    padding: generateScaling((744px 1140px), (20px 40px));
 //  }
 //  @returns clamp($min-value, <responsive-value>, $max-value)
 @function generateScaling($widths, $values, $rem: true) {
