--- a/site/_components/card.njk
+++ b/site/_components/card.njk
@@ -20,10 +20,8 @@
 <a href="{{ data.url }}" class="card type--base {{styles}}" aria-labelledby="{{ titleId }} {{ bodyId}} {{ sourceId }}">
   <article class="card__container">
     <header id="{{ titleId }}" class="card__title">
-      <div class="card__lead-in">
-        {% if data.topic %}{{ icon(data.eyebrow) }}{% endif %}
-        <small class="card__eyebrow type--eyebrow">{{ data.eyebrow }}</small>
-      </div>
+      {% if data.eyebrow in ['technical', 'events', 'trend'] %}{{ icon(data.eyebrow, 'card__topic') }}{% endif %}
+      <small class="card__eyebrow type--eyebrow">{{ data.eyebrow }}</small>
       <h4 class="card__heading type--h4">{{ data.title }}</h4>
     </header>
     <p id="{{ bodyId }}" class="card__body">{{ data.body }}</p>
