--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -54,9 +54,8 @@ $google-colors: (
   'green-50': #e6f4ea,
   'grey-1000': #000000,
   'grey-900': #202124,
-  'grey-825': #262626,
+  'grey-850': #2d2d2d,
   'grey-800': #3c4043,
-  'grey-775': #4e4e4e,
   'grey-750': #505050,
   'grey-700': #606367,
   'grey-600': #80868b,
