🐛(site) Fix style guide generation
Component folder was moved, and files were changed from .html to .njk, necessitating updating our automatic generation

--- a/site/_layouts/style-guide.njk
+++ b/site/_layouts/style-guide.njk
@@ -5,7 +5,7 @@ layout: _wrapper
 {% from 'component-preview.njk' import componentPreview %} {% set goBack = { url: 'style-guide', text: microcopy.breadcrumbs.replace('((t))', microcopy.styleGuide.title) } %} {% from 'icon.njk' import icon %}
 
 <article class="style-guide style-guide--component">
-  {% set filename = page.fileSlug + '.html' %} {% set component = components[filename] %}
+  {% set filename = page.fileSlug + '.njk' %} {% set component = components[filename] %}
   <header class="style-guide__header">
     <a class="cta cta--back" href="/{{locale.code}}/{{ goBack.url }}">{{ goBack.text }}</a>
     <h1 class="type--h2">{{title}}</h1>
