integrate global type

--- a/site/_components/call-out.njk
+++ b/site/_components/call-out.njk
@@ -11,8 +11,8 @@
  #}-->
 {% macro callOut(content, cta) -%}
 <aside class="call-out">
-  <h2 class="type--h4">{{content.title}}</h2>
-  {% if content.body %}<p class="type">{{content.body}}</p>{% endif %}
+  <h2 class="call-out__heading type--h2">{{content.title}}</h2>
+  {% if content.body %}<p class="call-out__body type">{{content.body}}</p>{% endif %}
   <a class="cta cta--high" href="{{cta.url}}">{{cta.text}}</a>
 </aside>
 {%- endmacro %}
