--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -62,7 +62,7 @@ hideNewsletter: true
   </div>
 
   <!-- Footnotes -->
-  <footer class="wrapper wrapper--full-bleed wrapper__background wrapper--no-bottom wrapper--padded wrapper__contained">
+  <footer class="wrapper wrapper--full-bleed wrapper__background wrapper--no-bottom wrapper--no-top wrapper--padded wrapper__contained">
     {{ footnotes(l10n.home.footnotes.notes) }}
   </footer>
 </div>
