--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -19,7 +19,7 @@ hideNewsletter: true
 
   <!-- Chrome OS Stats -->
   <section id="home__linux" class="wrapper wrapper--padded wrapper--padding">
-    {{ fiftyFifty(l10n.home.linux.content, l10n.home.linux.cta, l10n.home.linux.images, l10n.home.linux.shapes) }}
+    {{ fiftyFifty(l10n.home.linux.content, l10n.home.linux.cta, l10n.home.linux.images, l10n.home.linux.modifiers) }}
   </section>
 
   <section id="home__stats" class="wrapper wrapper--full-bleed wrapper--no-top wrapper--no-bottom" aria-label="{{ l10n.home.results.desc }}">
