--- a/site/sass/components/_fifty-fifty.scss
+++ b/site/sass/components/_fifty-fifty.scss
@@ -1,77 +1,42 @@
 @use 'sass:math';
 
 .fifty-fifty {
+  $single-column: 653px;
+  $content-width-m: pxRem(415px);
+  $content-width-r: generateScaling(($single-column 1440px), (340px 490px));
+
   display: grid;
-  margin-bottom: pxRem(70px);
-  place-items: center;
-
-  @include mq(420px) {
-    column-gap: pxRem(20px);
-    grid-template-columns: repeat(auto-fit, minmax(pxRem(280px), 1fr));
-  }
-
-  @include mq(608px) {
-    margin-bottom: 0;
-    padding: generateScaling((608px 1440px), (90px 113px)) 0 generateScaling((608px 1440px), (0 40px));
-  }
+  grid-gap: pxRem(30px) pxRem(20px);
+  grid-template-columns: repeat(auto-fit, minmax(pxRem(280px), 1fr));
+  justify-items: center;
 
   &__content {
-    margin-bottom: pxRem(30px);
-    margin-left: generateScaling((1140px 1600px), (0 122px));
-    max-width: generateScaling((744px 1440px), (340px 490px));
+    max-width: $content-width-m;
     text-align: center;
 
-    @include mq(608px) {
-      place-self: flex-start;
-      text-align: left;
+    @supports (margin-left: clamp(1px, 1vw, 2px)) {
+      max-width: $content-width-r;
+    }
+
+    @include mq($single-column) {
+      [dir='ltr'] & {
+        text-align: left;
+      }
+
+      [dir='rtl'] & {
+        text-align: right;
+      }
     }
 
     .type--base,
     .cta {
-      margin-top: pxRem(24px);
+      margin-top: 1.5rem;
     }
-  }
-
-  &__cta {
-    display: inline-flex;
   }
 
   &__image-wrapper {
-    display: grid;
-    max-width: min(100%, pxRem(570px));
-    place-content: center;
+    max-width: pxRem(570px);
     position: relative;
-
-    .shape--bracket-circle {
-      height: generateScaling((320px 1440px), (308px 420px));
-      left: calc(100% + pxRem(24px));
-      position: absolute;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      width: generateScaling((320px 1440px), (308px 420px));
-
-      @include mq(608px) {
-        left: math.percentage(math.div(2, 3));
-        top: math.percentage(math.div(1, 3));
-      }
-    }
-
-    .shape--semicircle {
-      --circle-radius: 100px;
-      --circle-offset: 100px;
-      height: 100px;
-      left: 3%;
-      position: absolute;
-      top: 40%;
-      transform: rotate(155deg);
-      width: 200px;
-    }
-  }
-
-  &__shapes {
-    height: 100%;
-    position: relative;
-    width: 100%;
   }
 
   &__image {
