update typography, refactor approach to shapes

--- a/site/_components/validation-card.njk
+++ b/site/_components/validation-card.njk
@@ -16,9 +16,8 @@
   <dl>
     <dt class="validation-card__dt">
       {{content.description}}
-      {% if modifiers.shape %} <div class="validation-card__shape shape" role="presentation"></div> {% endif %}
     </dt>
-    <dd class="validation-card__dd">
+    <dd class="validation-card__dd type--base">
       {{content.details}}
     </dd>
   </dl>
