--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -17,6 +17,7 @@ hideNewsletter: true
     {{ heroAnimated(l10n.home.hero.heading, l10n.home.hero.cta, l10n.home.hero.img) }}
   </header>
 
+  <!-- Stat Validation -->
   <div id="home__validation" class="wrapper wrapper--padded wrapper--padding">
     {{ itemGrid(l10n.home.validation.title, l10n.home.validation.items, l10n.home.validation.modifiers) }}
   </div>
