--- a/site/_components/item-grid.njk
+++ b/site/_components/item-grid.njk
@@ -11,6 +11,7 @@
         A value equals to 0 will turn off the shape. Defaults to 0.
     @param {string} modifiers.variant: If 'icon', it will render the icon-card. if 'subnav' it will render card-subnav. if 'community' it will render external-community.
     @param {string} modifiers.subtitle: Text for a subtitle beneath the primary title.
+    @param {string} modifiers.heading: Designate the section heading typography class.
 
     @param {string} locale: Code for the current locale, used when 'modifiers.variant' is 'subnav'
 
@@ -18,8 +19,8 @@
  #}-->
 {% from 'external-community.njk' import externalCommunity %} {% from 'card-subnav.njk' import cardSubnav %} {% from 'icon-card.njk' import iconCard %} {% from 'card.njk' import card %} {% from 'validation-card.njk' import validationCard %} {% macro itemGrid(title, items, modifiers, locale, defaultText) %} {% if items.length > 0 %}
 <section class="item-grid {{modifiers.custom}} {{'item-grid--icon-card' if modifiers.variant == 'icon'}} {{ 'item-grid--subnav' if modifiers.variant == 'subnav' }} {{'item-grid--community' if modifiers.variant == 'community'}} {{'item-grid--circled' if modifiers.shapeOn }}">
-  <h3 class="item-grid__title {% if modifiers.variant == 'validation' %}type--h1{% else %}type--h3{% endif %}">{{title}}</h3>
-  {% if modifiers.subtitle %} <h4 class="type--large item-grid__subtitle">{{modifiers.subtitle}}</h4> {% endif %}
+  <h3 class="item-grid__title {% if modifiers.heading %} type--{{modifiers.heading}} {% else %} type--h1 {% endif %}">{{title}}</h3>
+  {% if modifiers.subtitle %}<p class="item-grid__subtitle type--large">{{modifiers.subtitle}}</p>{% endif %}
   <div class="item-grid__content">
     {% for item in items %} {% if modifiers.variant == 'icon' %} {{iconCard(item, defaultText)}} {% elif modifiers.variant == 'subnav' %} {% if item.icon and item.desc %} {{cardSubnav(item, locale)}} {% endif %} {% elif modifiers.variant == 'community' %} {{externalCommunity(item.logo, item.cta)}} {% elif modifiers.variant == 'validation' %} {{validationCard(item, item.modifiers)}}{% else %} {{ card(item) }} {% endif %} {% endfor %}
   </div>
