--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -28,8 +28,12 @@
   }
 
   &__subtitle {
-    margin: pxRem(8px) auto 0;
-    max-width: pxRem(450px);
+    color: var(--grey-700);
+    margin-top: 1rem;
+
+    @supports (margin-top: clamp(1px, 1vw, 2px)) {
+      margin-top: clamp(0.625rem, 2.66vw, 1rem);
+    }
   }
 
   &__content {
@@ -54,6 +58,12 @@
   }
 
   &--validation & {
+    &__subtitle {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: pxRem(400px);
+    }
+
     &__content {
       grid-gap: pxRem(70px) pxRem(20px);
       grid-template: auto / 1fr;
