--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -55,6 +55,7 @@ $google-colors: (
   'grey-1000': #000000,
   'grey-900': #202124,
   'grey-800': #3c4043,
+  'grey-750': #505050,
   'grey-700': #606367,
   'grey-600': #80868b,
   'grey-500': #9aa0a6,
