💎(site) Create documentation for all components
Adds documentation and samples for all chromeos.dev components. This CL
starts with author and future CLs will add additional contirbutions.

Fixes #318

--- a/site/_components/author.njk
+++ b/site/_components/author.njk
@@ -8,7 +8,7 @@
   @param {object[]} author[].work - List of objects containing the following attributes.
   @param {string} author[].work.title - author's title.
   @param {string} author[].work.company - author's company.
-  @param {string} author[].work.title - author's company organization.
+  @param {string} author[].work.org - author's company organization.
   @param {string} alt - String to describe the author's photo, and should be used author.alt from the microcopy template.
   
  #}-->
