--- a/site/_components/card-study.njk
+++ b/site/_components/card-study.njk
@@ -2,15 +2,26 @@
   Renders a card for a case study.
 
   @param {object} study: Object containing the following attributes.
-  @param {string} study.eyebrow
-  @param {string} study.title
-  @param {object} study.logo
-  @param {object} study.media
-  @param {object} study.cta
+  @param {string} study.eyebrow - String representing the card eyebrow.
+  @param {string} study.title - String representing the card title.
+
+  @param {object} study.logo - Object containing the following attributes.
+  @param {string} logo.src - Image path of the logo.
+  @param {string} logo.name - Name for the logo for use as alt text.
+
+  @param {object} study.media - Object containing the following attributes.
+  @param {string} media.src - Image's source.
+  @param {string} media.alt - Image description.
+
+  @param {object} study.cta - Object containing the following attributes.
+  @param {string} cta.text - CTA message.
+  @param {string} cta.url - URL for the CTA.
+
+  @param {boolean} featured - Indicates whether or not the card receives unique styling.
 #}-->
 {% from 'icon.njk' import icon %}
-{% macro cardStudy(study) %}
-  <article class="card-study {% if not study.logo %} card-study--no-logo{% endif %}">
+{% macro cardStudy(study, featured) %}
+  <article class="card-study {{'card-study--featured' if featured}} {{'card-study--no-logo' if not study.logo}}">
     <img class="card-study__media" src="{{study.media.src}}" alt="{{study.media.alt}}" />
     <div class="card-study__tile">
       {% if study.logo %}
@@ -19,10 +30,9 @@
       {% if study.eyebrow %}
       <small class="type--eyebrow card-study__tile-eyebrow">{{study.eyebrow}}</small>
       {% endif %}
-      <h1 class="type--h4 card-study__tile-title">{{study.title}}</h1>
-      <a class="cta cta--low card-study__tile-cta" href="{{study.cta.url}}">
+      <h1 class="{{'type--h3' if featured}}{{'type--h4' if not featured}} card-study__tile-title">{{study.title}}</h1>
+      <a class="cta cta--link card-study__tile-cta" href="{{study.cta.url}}">
         {{study.cta.text}}
-        {{icon('arrow-forward')}}
       </a>
     </div>
   </article>  
