--- a/site/sass/components/_wrapper.scss
+++ b/site/sass/components/_wrapper.scss
@@ -7,15 +7,13 @@
 @use 'sass:math';
 
 .wrapper {
-  $content-max-width: pxRem(1440px);
   $content-max-width: pxRem(1600px);
-  $max-width: 1024px;
+
   $max-width: 1440px;
   $scaler: math.div(math.div($max-width, 100), 1vw);
 
-  $block-spacing-s: 5.75rem;
-  $block-spacing-l: 7.5rem;
-  $inline-spacing-s: 3.75rem;
+  $block-spacing-s: 8.25rem;
+  $block-spacing-l: 10.5rem;
   $inline-spacing-s: 1.5rem;
   $inline-spacing-l: 5rem;
 
@@ -53,20 +51,18 @@
   }
 
   &--padded {
-    padding-left: $inline-spacing-r;
-    padding-left: fluid(pxRem(744px), pxRem(1140px), pxRem(24px), pxRem(60px));
-    padding-right: $inline-spacing-r;
-    padding-right: fluid(pxRem(744px), pxRem(1140px), pxRem(24px), pxRem(60px));
+    padding-left: $inline-spacing-m;
+    padding-right: $inline-spacing-m;
 
-    @include mq(1140px) {
-      padding-left: fluid(pxRem(1140px), $content-max-width, pxRem(60px), pxRem(80px));
-      padding-right: fluid(pxRem(1140px), $content-max-width, pxRem(60px), pxRem(80px));
+    @supports (margin: clamp(1px, 1vw, 2px)) {
+      padding-left: $inline-spacing-r;
+      padding-right: $inline-spacing-r;
     }
   }
 
   &__contained > * {
     margin: 0 auto;
-    max-width: $content-max-width;
+    max-width: $max-width;
   }
 
   &--rhythm > *:not(:last-child) {
@@ -184,7 +180,7 @@
   }
 
   &__background {
-    background-color: var(--grey-50);
+    background-color: var(--grey-100);
     overflow: hidden;
 
     .cta--link {
