--- a/site/_components/banner-interstitial.njk
+++ b/site/_components/banner-interstitial.njk
@@ -19,19 +19,19 @@
 #}-->
 {% from 'icon.njk' import icon %}
 {% macro bannerInterstitial(content, image, cta, modifiers) %}
-<div class="wrapper--padding">
-  <article class="banner-interstitial {% if modifiers.class %}{{modifiers.class}}{% endif %}">
-    <div class="banner-interstitial__background-layer"></div>
-    <div class="banner-interstitial__content">
-      <small class="banner-interstitial__eyebrow type--h3">{{content.eyebrow}}</small>
-      <h2 class="banner-interstitial__title type--h1">{{content.title}}</h2>
-      <p class="banner-interstitial__copy type--large">{{content.copy}}</p>
-      <a href="{{cta.url}}" class="cta cta--medium banner-interstitial__cta">
+<article class="banner-interstitial {% if modifiers.class %}{{modifiers.class}}{% endif %}">
+  <div class="banner-interstitial__content">
+    <div class="banner-interstitial__text">
+      <small class="banner-interstitial__eyebrow type--h1">{{content.eyebrow}}</small>
+      <h2 class="banner-interstitial__title type--mega">{{content.title}}</h2>
+      <p class="banner-interstitial__copy type--base">{{content.copy}}</p>
+      <a href="{{cta.url}}" class="cta cta--link banner-interstitial__cta">
         {{cta.text}}
-        {{icon('arrow-forward')}}
       </a>
     </div>
-    <img src="{{image.src}}" alt="{{image.alt}}" class="banner-interstitial__image">
-  </article>
-</div>
+    <div class="banner-interstitial__image-wrapper">
+      <img src="{{image.src}}" alt="{{image.alt}}" class="banner-interstitial__image">
+    </div>
+  </div>
+</article>
 {% endmacro %}
