--- a/site/_generated/index.njk
+++ b/site/_generated/index.njk
@@ -47,7 +47,7 @@ hideNewsletter: true
   {% endif %}
 
   <!-- Chromebooks -->
-  <div id="home__banner" class="wrapper wrapper--padding wrapper--padded">
+  <div id="home__banner" class="wrapper wrapper--padded wrapper--full-bleed wrapper__contained banner-interstitial__wrapper">
     {{ bannerInterstitial(l10n.home.chromebook.content, l10n.home.chromebook.image, l10n.home.chromebook.cta, l10n.home.chromebook.modifiers) }}
   </div>
 
