--- a/site/sass/globals/_functions.scss
+++ b/site/sass/globals/_functions.scss
@@ -18,11 +18,13 @@
   @param {boolean} $rem (optional) - Cast the provided px length or unitless number to a rem. When false, casts to em instead.
 */
 @function pxCast($length, $rem: true) {
+  /* stylelint-disable function-no-unknown */
   @if unitless($length) and $length != 0 {
     @error 'pxCast: $length is unitless and non-zero.';
   }
   $casted: if(unitless($length), $length * 1px, $length);
   @return if($rem, pxRem($casted), pxEm($casted));
+  /* stylelint-enable function-no-unknown */
 }
 
 //  @desc Scale a value from one screen width to another based on the difference between the minimum
@@ -36,6 +38,7 @@
 //  }
 //  @returns clamp($min-value, <responsive-value>, $max-value)
 @function generateScaling($widths, $values, $rem: true) {
+  /* stylelint-disable function-no-unknown */
   $params: (
     'min-width': pxCast(nth($widths, 1), $rem),
     'max-width': pxCast(nth($widths, 2), $rem),
@@ -54,4 +57,5 @@
 
   $responsive-value: unquote('#{$min-value - ($min-width * $rate)} + #{100vw * $rate}');
   @return clamp($min-value, $responsive-value, $max-value);
+  /* stylelint-enable function-no-unknown */
 }
