--- a/site/_generated/_components/header.njk
+++ b/site/_generated/_components/header.njk
@@ -6,4 +6,4 @@ pagination:
 permalink: '_components/{{ l10n.locale.code | slug }}/header.html'
 ---
 
-{% from 'header.njk' import header %} {{ header(l10n.nav, l10n.search.placeholder, l10n.locale, false) }}
+{% from 'header.njk' import header %} {{ header(l10n.nav, l10n.search.placeholder, l10n.newsletter.subscribe.cta, l10n.locale, false) }}
