simplify units, adapt to existing wrapper spacing

--- a/site/sass/components/_external-community.scss
+++ b/site/sass/components/_external-community.scss
@@ -1,6 +1,6 @@
 // Styles for the external community with logo.
 .external-community {
-  $logo-size: pxRem(48px);
+  $logo-size: 3rem;
   $max-width: 7.25rem;
 
   flex: 1 0 $max-width;
