--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -36,7 +36,7 @@
   &--community & {
     &__content {
       display: flex;
-      flex-flow: row wrap;
+      flex-wrap: wrap;
       justify-content: center;
       margin-left: auto;
       margin-right: auto;
