--- a/site/_components/card.njk
+++ b/site/_components/card.njk
@@ -20,7 +20,7 @@
 <a href="{{ data.url }}" class="card type--base {{styles}}" aria-labelledby="{{ titleId }} {{ bodyId}} {{ sourceId }}">
   <article class="card__container">
     <header id="{{ titleId }}" class="card__title">
-      {% if data.eyebrow in ['technical', 'events', 'trend'] %}{{ icon(data.eyebrow, 'card__topic') }}{% endif %}
+      {% if data.eyebrow in ['technical', 'events', 'trend', 'product news'] %}{{ icon(data.eyebrow, 'card__topic') }}{% endif %}
       <small class="card__eyebrow type--eyebrow">{{ data.eyebrow }}</small>
       <h4 class="card__heading type--h4">{{ data.title }}</h4>
     </header>
